--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                 <div class="ms-auto">
                     <a class="me-2 text-warning" href=""><i class="bi bi-facebook"></i></a>
                     <a class="me-2 text-warning" href=""><i class="bi bi-instagram"></i></a>
-                    <a class="me-2 text-warning" href="https://github.com/ADi7YA26"><i class="bi bi-github"></i></a>
+                    <a class="me-2 text-warning" href="https://github.com/dasarijashwanth"><i class="bi bi-github"></i></a>
                 </div>
             </div>
         </div>
