--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                     </div>
                     <div class="col-md-4 py-2 py-md-2">
                         <div class="bg-light mb-5 mb-md-0 p-2 p-lg-5 text-center position-relative">
-                            <img alt="" class="rounded-circle position-absolute translate-middle top-0" height="96" src="assets/user-2.webp" width="96">
+                            <img alt="" class="rounded-circle position-absolute translate-middle top-0" height="96" src="assets/user-2.jpg" width="96">
                             <div class="text-warning mb-md-4 mb-2 mt-5 mt-lg-4">
                                 <svg class="bi bi-quote" fill="currentColor" height="48" viewbox="0 0 16 16" width="48" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M12 12a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1h-1.388c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 9 7.558V11a1 1 0 0 0 1 1h2Zm-6 0a1 1 0 0 0 1-1V8.558a1 1 0 0 0-1-1H4.612c0-.351.021-.703.062-1.054.062-.372.166-.703.31-.992.145-.29.331-.517.559-.683.227-.186.516-.279.868-.279V3c-.579 0-1.085.124-1.52.372a3.322 3.322 0 0 0-1.085.992 4.92 4.92 0 0 0-.62 1.458A7.712 7.712 0 0 0 3 7.558V11a1 1 0 0 0 1 1h2Z"></path></svg>
